# text-to-SQL

./: .gitignore  README.md  company.db  create_db.py  fly.toml  main.py  pyproject.toml
backend/: .env.example  DockerFile  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/features/text_to_sql/: __init__.py  dependencies.py  router.py  schemas.py  service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Container.tsx  Footer.tsx  Navbar.tsx
frontend/src/components/shared/: ErrorBoundary.tsx  LoadingState.tsx  Logo.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx  separator.tsx  skeleton.tsx  tooltip.tsx
frontend/src/features/landing/components/: CTA.tsx  Features.tsx  Hero.tsx
frontend/src/features/landing/pages/: LandingPage.tsx
frontend/src/features/query/components/: ExecutionStatus.tsx  QueryHistory.tsx  QueryInput.tsx  ResultsTable.tsx  SQLPreview.tsx  SchemaSidebar.tsx
frontend/src/features/query/hooks/: useExecuteQuery.ts  useGenerateSQL.ts  useSchema.ts
frontend/src/features/query/pages/: QueryPage.tsx
frontend/src/features/query/types/: index.ts
frontend/src/hooks/: useLocalStorage.ts
